<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_lbl_primer_numero"
        app:layout_constraintEnd_toStartOf="@+id/caja_primer_numero"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"
        android:text="@string/txt_lbl_segundo_numero"
        app:layout_constraintEnd_toStartOf="@+id/caja_segundo_numero"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/caja_primer_numero"
        android:layout_width="122dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/txt_hint_cajas_numeros"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_segundo_numero"
        android:layout_width="124dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_cajas_numeros"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_primer_numero" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="265dp"
        android:layout_height="89dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_segundo_numero">


        <RadioButton
            android:id="@+id/radio_sumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_radio_sumar" />

        <RadioButton
            android:id="@+id/radio_restar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_radio_restar" />

        <RadioButton
            android:id="@+id/radio_multiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_radio_multiplicar" />

        <RadioButton
            android:id="@+id/radio_dividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_radio_dividir" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_procesar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="108dp"
        android:onClick="procesar"
        android:text="@string/txt_btn_procesar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_lbl_resultado"
        app:layout_constraintEnd_toStartOf="@+id/caja_resultado"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/caja_resultado"
        android:layout_width="152dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/txt_hint_caja_resultado"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_procesar" />

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_resultado">

        <CheckBox
            android:id="@+id/chk_redondear"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="eventoCheckBoxes"
            android:text="@string/txt_chk_redondear" />

        <CheckBox
            android:id="@+id/chk_negrita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="eventoCheckBoxes"
            android:text="@string/txt_chk_negrita" />

        <CheckBox
            android:id="@+id/chk_cursiva"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="eventoCheckBoxes"
            android:text="@string/txt_chk_cursiva" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>